swagger から再生するとこまでできた
