# KissServer/VProcessList.cs
@@ -1,0 +1,11 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Text;
+
+namespace KissServer
+{
+    class VProcessList
+    {
+        public List<VProcess> processes { get; set; } = new List<VProcess>();
+    }
+}
